--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.21.1",
     "@ionic/angular": "^5.0.3",
     "animate.css": "^3.7.2",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "ionic2-super-tabs": "^4.1.4",
     "rxjs": "~6.5.1",
