--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.21.1",
     "@ionic-native/status-bar": "^5.21.1",
     "@ionic/angular": "^5.0.3",
+    "@ionic/storage": "^2.2.0",
     "animate.css": "^3.7.2",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.7",
@@ -51,7 +52,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
