--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
@@ -31,7 +32,8 @@
     "core-js": "^2.5.7",
     "ionic2-super-tabs": "^4.1.4",
     "node-sass": "^4.13.1",
-    "rxjs": "~6.5.1",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
