--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.21.1",
     "@ionic-native/status-bar": "^5.21.1",
     "@ionic/angular": "^5.0.3",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/storage": "^2.2.0",
     "animate.css": "^3.7.2",
     "chart.js": "^2.9.3",
@@ -34,6 +35,7 @@
     "node-sass": "^4.13.1",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
+    "toolbox": "^0.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -62,7 +64,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "^3.4.5"
   },
   "description": "An Ionic project"
 }
