--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
     "@angular/common": "~8.1.2",
-    "@angular/core": "~8.1.2",
+    "@angular/core": "^8.1.3",
     "@angular/forms": "~8.1.2",
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.1.2",
