--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/storage": "^2.2.0",
     "animate.css": "^3.7.2",
+    "capacitor": "^0.5.5",
     "chart.js": "^2.9.3",
+    "cordova": "^9.0.0",
     "core-js": "^2.6.11",
     "ionic2-super-tabs": "^4.3.1",
     "node-sass": "^4.14.1",
